--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
      <div class="body">
         <!-- Website Menu -->
+
         <div class = "separator">
             <div class ="menu">
 
@@ -36,9 +37,6 @@
         </div>
 
 
-
-
-
         <div class="audioBlock">
             <p> Test Audio(It's just a Brass Quintet Performance Right Now)</p>
             <audio controls>
@@ -46,8 +44,8 @@
              </audio>
         </div>
 
-        <!-- <audio id="audiofile" src="https://www.codepunker.com/resources/audio-sync-with-text/10bears.mp3" controls></audio><br>
-        <div id="subtitles"></div> -->
+        <audio id="audiofile" src="assets/audio/yt5s.com - Vuelta del Fuego (128 kbps).mp3" controls></audio><br>
+        <div id="subtitles"></div>
 
      </div>
 
