git repo link added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             This work in progress website will be completely custom coded to host the audio for the podcast and include items such as:
             <li style="font-size: 30px;"> Works Cited </li>
             <li style="font-size: 30px;"> Live Transcript </li>
-            <p style="font-size: 30px">Below is a basic representation of the test of the live transcript running with javascript. For the purposes of this proof of concept, the first image is our first potential interview subject, The second image is the pokemon that best represents the person interviewing them(Sarah).
+            <p style="font-size: 30px">
+                The Github repository can befound <a href="https://github.com/cs-powell/Podcast">  here</a> <br>
+                Below is a basic representation of the test of the live transcript running with javascript. For the purposes of this proof of concept, the first image is our first potential interview subject, The second image is the pokemon that best represents the person interviewing them(Sarah).
                  (It will look much nicer upon completion).</p>
         </p>
     
