toggle switch added for autoscrolling

--- a/authors.html
+++ b/authors.html
@@ -44,7 +44,7 @@
 
             <div class="profile">
                 <div class="profile-left">
-                    <img src="./assets/images/micbite.jpg"/>
+                    <img src="./assets/images/pokemon.png"/>
                     
                 </div>
                 <div class="profile-right">
