--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div id="subtitles"></div>
                 </div>
                 
-                <div class ="sticky-box-RIGHT">
+                <div id="control-panel" class ="sticky-box-RIGHT">
                     <span style="
                     background-color: black; width: 100%; 
                     justify-items: center; padding: inherit; 
@@ -98,8 +98,8 @@
                     controls></audio><br>
 
                    <div style="display: flex; flex-direction: row;">
-                        <h1 style=" margin-right: 20px;">Toggle Autoscroll</h1>
-                        <label class="switch">
+                        <h1 id="autoscroll" style=" margin-right: 20px; color: white;">Toggle Autoscroll</h1>
+                        <label id="scroll-switch1"class="switch">
                             <input type="checkbox" id="scroll-switch">
                             <span class="slider"></span>
                         </label>
