--- a/wc.html
+++ b/wc.html
@@ -31,7 +31,7 @@
                 <button >Works Cited</button>
             </a>
 
-            <a href="authors.html">
+            <a href="ghost.html">
                 <button >Ghosts</button>
             </a>
         </div>
