--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         The Github repository can be found <a href="https://github.com/cs-powell/Podcast">  here</a> </p>
                 </div>
 
-                <div class="heading-bubble">
+                <!-- <div class="heading-bubble">
                     <h1>Table of Contents</h1>
                 </div>
 
@@ -54,7 +54,7 @@
                     <li>Neuroscience Speciifc Topic 1</li>
                     <li>Neuroscience Speciifc Topic 2</li>
                     <li>Neuroscience Speciifc Topic 3</li>
-                </div>
+                </div> -->
 
             </div>
 
