--- a/index.html
+++ b/index.html
@@ -97,13 +97,23 @@
                     <audio id="audiofile" src="assets/audio/FINAL PODCAST.mp3"  style="margin-top: 10px;"
                     controls></audio><br>
 
-                   <div style="display: flex; flex-direction: row;">
+                   <div style="display: flex; flex-direction: column;">
+
+                    <div style="display: flex; flex-direction: row;">
                         <h1 id="autoscroll" style=" margin-right: 20px; color: white;">Toggle Autoscroll</h1>
                         <label id="scroll-switch1"class="switch">
                             <input type="checkbox" id="scroll-switch">
                             <span class="slider"></span>
                         </label>
-                   </div>
+                    </div>
+
+                    <div style="display: flex; flex-direction: row;">
+                        <h1 id="autoscroll" style=" margin-right: 20px; color: white;">Presentation Mode</h1>
+                        <label id="scroll-switch2"class="switch">
+                            <input type="checkbox" id="scroll-switch2">
+                            <span class="slider"></span>
+                        </label>
+                    </div>
                     
                 
                     <div id="question-box">
