--- a/wc.html
+++ b/wc.html
@@ -40,6 +40,10 @@
     <div class="wc-box">
         <h1>Works Cited</h1>
         <div id = "wc"></div>
+
+        <h1>Music Used</h1>
+        <div id = "mc"></div>
+
     </div>
 </div>
    
